# project-manager

./: .dockerignore  .editorconfig  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  bandit-report.json  docker-compose.yml  index.html  mkdocs.yml  package.json  pyproject.toml
.agent/: AGENTS.md  CONTEXT.md  PLAYBOOK.md  PRINCIPLES.md  VIBE_CODING.md  VIBE_CRITIQUE_PROMPTS.md
.agent/reviews/: TEMPLATE.md
.agent/skills/: CATALOG.md  _TEMPLATE.md
.agent/skills/api-endpoint/: SKILL.md
.agent/skills/context-audit/: SKILL.md  context-audit.py
.agent/skills/data-ingestion/: SKILL.md
.agent/skills/database-migration/: SKILL.md
.agent/skills/doc-writer/: SKILL.md
.agent/skills/end-session/: SKILL.md
.agent/skills/mcp-workflow/: SKILL.md
.agent/tasks/: lessons.md
.agent/workflows/: health-check.md  release-checklist.md  session-handoff.md  test-ci.md  workflow-orchestration.md
.codex/: MAP.md  QUICKSTART.md  README.md
.github/workflows/: ci.yml  docs.yml
ai_guide/: index.html
ai_session_templates/: index.html
api/: index.html
architecture/ai_docs_organization_guide/: index.html
architecture/data_modeling/: index.html
architecture/system_overview/: index.html
archive/enhancements_completed/: index.html
archive/implementation_checklist/: index.html
archive/v1.0.0_implementation_summary/: index.html
archive/v1.1.0_enhancements_summary/: index.html
checklists/: index.html
config/: tracked_repos.yaml
data/contracts/: index.html
data/database/: .gitignore
data/dictionary/: index.html
development_standards/: index.html
docs/: ai_guide.md  ai_session_templates.md  development_standards.md  getting_started.md  glossary.md  implementation_schedule.md  index.md  knowledge_base.md  project_brief.md  project_charter.md  runbook.md  template_migration_guide.md  template_starting_guide.md  template_testing_guide.md  troubleshooting.md  v2_roadmap.md
docs/api/: README.md  openapi.yaml
docs/architecture/: system_overview.md
docs/archive/: enhancements_completed.md  implementation_checklist.md  v1.0.0_implementation_summary.md  v1.1.0_enhancements_summary.md
docs/guides/: silo_architecture.md  web_architecture.md
docs/tools/: cli-continues.md  markdown_fetcher.md  pre_commit_hooks.md
getting_started/: index.html
glossary/: index.html
guides/silo_architecture/: index.html
guides/web_architecture/: index.html
implementation_schedule/: index.html
knowledge_base/: index.html
models/experiment_plan/: index.html
models/model_card/: index.html
notebooks/: 01_mlflow_and_logging_demo.ipynb  02_full_observability_demo.ipynb
project_brief/: index.html
project_charter/: index.html
runbook/: index.html
scripts/: check_links.py  init_template.py  setup_project.py  test_notebooks.py  validate_template.py  vibe_sync.py
search/: search_index.json
security/: index.html
session_logs/: README.md  TEMPLATE.md
session_logs/03-21-2026/: 1 - Vibe Coding Best Practices Review.md
session_logs/04-22-2026/: 1 - Full Repo Cleanup and v2 Roadmap.md
session_logs/04-24-2026/: 1 - Phase 7 Complete + Test Coverage.md
session_logs/04-25-2026/: 1 - Phase 7.4 Background Sync + Stale Alerts.md  2 - Phase 7.5 Discovery + Docker Deployment.md
src/project_manager/: __init__.py  models.py
src/utils/: agent_logging.py
src/vibe_coding/: __init__.py  config.py
template_migration_guide/: index.html
template_starting_guide/: index.html
template_testing_guide/: index.html
tests/: conftest.py  test_config.py  test_models.py
tests/api/: test_endpoints.py  test_repos.py
tests/core/: test_config.py  test_settings.py
tests/data/: test_make_dataset.py  test_process_features.py
tests/fixtures/: sample_config.env  sample_logging_config.json  sample_session_log.md
tests/integration/: test_config_integration.py  test_logging_integration.py  test_workflow_integration.py
tests/models/: test_evaluate_model.py  test_predict_model.py  test_train_model.py
tests/pipelines/: test_prediction_pipeline.py  test_training_pipeline.py
tests/services/: test_docs.py  test_github.py  test_normalizer.py  test_registry.py  test_scheduler.py  test_storage.py  test_sync.py
tests/utils/: test_logging.py  test_markdown_fetcher.py
tools/cli-continues/: index.html
tools/cli_agent_coding_guide/: index.html
tools/cli_tool_template/: index.html
tools/markdown_fetcher/: index.html
tools/mcp_tooling/: index.html
tools/pre_commit_hooks/: index.html
troubleshooting/: index.html
ui/: package-lock.json  package.json  tailwind.config.ts  vite.config.ts
ui/src/: index.css  main.tsx
v2_roadmap/: index.html
workflows/bugfix_troubleshooting/: index.html
workflows/data_pipeline_changes/: index.html
workflows/deployment_and_rollbacks/: index.html
workflows/feature_development/: index.html
workflows/model_training_and_eval/: index.html
(+54 files in other folders)
