[project]
name = "project-manager"
version = "0.1.0"
description = "Backend and docs for Project Manager, a GitHub repository status dashboard."
authors = [{ name = "Connor Kitchings", email = "connor.kitchings@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "apscheduler~=3.10",
    "Flask>=3.1.0",
    "PyYAML>=6.0.2",
    "requests>=2.31.0",
]

[project.optional-dependencies]
scripts = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyperclip>=1.8.2",
]

security = [
    "bandit>=1.7.9",
    "safety>=2.3.5",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=project_manager",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=85",
    "-v",
]

[tool.coverage.run]
source = ["src/project_manager"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.11",
    "mkdocs>=1.6.1",
    "pytest-cov>=7.0.0",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyperclip>=1.8.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["project_manager*"]
